--- a/notebooks/Stackerlberg Best Response.ipynb
+++ b/notebooks/Stackerlberg Best Response.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -53,14 +53,14 @@
       "  Bounds range     [0e+00, 0e+00]\n",
       "  RHS range        [1e+00, 1e+00]\n",
       "Presolve removed 2 rows and 1 columns\n",
-      "Presolve time: 0.01s\n",
+      "Presolve time: 0.02s\n",
       "Presolved: 1 rows, 2 columns, 2 nonzeros\n",
       "\n",
       "Iteration    Objective       Primal Inf.    Dual Inf.      Time\n",
       "       0   -0.0000000e+00   3.750000e-01   0.000000e+00      0s\n",
       "       1   -2.7272727e+00   0.000000e+00   0.000000e+00      0s\n",
       "\n",
-      "Solved in 1 iterations and 0.01 seconds\n",
+      "Solved in 1 iterations and 0.03 seconds\n",
       "Optimal objective -2.727272727e+00\n",
       "x1 0.4545454545454546\n",
       "x2 0.5454545454545454\n",
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -131,18 +131,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 35,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "values = (1,3,1,2,1)"
+    "values = (1,3,1,2,1,3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 36,
    "metadata": {
     "collapsed": false
    },
@@ -151,29 +151,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Optimize a model with 6 rows, 6 columns and 30 nonzeros\n",
-      "Coefficient statistics:\n",
-      "  Matrix range     [1e+00, 3e+00]\n",
-      "  Objective range  [1e+00, 1e+00]\n",
-      "  Bounds range     [0e+00, 0e+00]\n",
-      "  RHS range        [1e+00, 1e+00]\n",
-      "Presolve time: 0.03s\n",
-      "Presolved: 6 rows, 6 columns, 30 nonzeros\n",
-      "\n",
-      "Iteration    Objective       Primal Inf.    Dual Inf.      Time\n",
-      "       0      handle free variables                          0s\n",
-      "       4   -1.2000000e+00   0.000000e+00   0.000000e+00      0s\n",
-      "\n",
-      "Solved in 4 iterations and 0.03 seconds\n",
-      "Optimal objective -1.200000000e+00\n",
       "x0 0.0\n",
-      "x1 0.6\n",
+      "x1 0.4285714285714286\n",
       "x2 0.0\n",
-      "x3 0.4\n",
+      "x3 0.14285714285714285\n",
       "x4 0.0\n",
-      "v -1.2\n",
-      "Obj: -1.2\n",
-      "[0.0, 0.6, 0.0, 0.4, 0.0]\n"
+      "x5 0.4285714285714286\n",
+      "v -1.7142857142857142\n",
+      "Obj: -1.7142857142857142\n",
+      "[0.0, 0.4285714285714286, 0.0, 0.14285714285714285, 0.0, 0.4285714285714286]\n"
      ]
     }
    ],
@@ -189,6 +175,7 @@
     "    terms = [-values[t]*strategy[i] for i in targets if i != t]\n",
     "    m.addConstr(sum(terms) - v >= 0, \"c\"+str(t))\n",
     "m.addConstr(sum(strategy) == 1, \"c\"+str(len(targets)))\n",
+    "m.params.outputflag = 0\n",
     "m.optimize()\n",
     "for v in m.getVars():\n",
     "    print(v.varName, v.x)\n",
@@ -199,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -207,17 +194,70 @@
     {
      "data": {
       "text/plain": [
-       "gurobipy.LinExpr"
+       "[0.0, 0.4285714285714286, 0.0, 0.14285714285714285, 0.0, 0.4285714285714286]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "type(sum([x1,x2])+x2)"
+    "[float(s.x) for s in strategy]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "f = 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "terms = [-values[f]*strategy[i].x for i in targets if i != f]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-1.7142857142857144"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum(terms)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
